# Learn_Tauri_with_Svelte

./: index.html  package-lock.json  package.json  svelte.config.js
src/: App.svelte  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs  tools.rs
src/lib/: Content.svelte  Modal.svelte  Registration.svelte  Task.svelte
src/lib/MainComponent/: Content.svelte  MainMenu.svelte  Modal.svelte  Registration.svelte
src/lib/Tasks/: ChangeTask.svelte  Task.svelte  TasksList.svelte
src/tools/: event.js  small_operation.js  tasks.js
