[package]
name = "Learn_Tauri_with_Svelte"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-all", "path-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
postgres = "0.19.5"
lazy_static = "1.2.0"
futures = "0.3"
tokio-postgres = "0.7.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
